src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    MINUSEQUAL
    MINUSMINUS
    MOD
    PLUSEQUAL
    PLUSPLUS
    USING

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> declaration
Rule 4     declarations -> <empty>
Rule 5     declaration -> type ID ASSIGN expression SEMICOLON
Rule 6     declaration -> type ID SEMICOLON
Rule 7     declaration -> CONSOLE DOT WRITELINE LPAREN expression RPAREN SEMICOLON
Rule 8     declaration -> IF LPAREN expression RPAREN LBRACE declarations RBRACE else_part
Rule 9     else_part -> ELSE LBRACE declarations RBRACE
Rule 10    else_part -> ELSE IF LPAREN expression RPAREN LBRACE declarations RBRACE else_part
Rule 11    else_part -> <empty>
Rule 12    declaration -> FOR LPAREN for_init SEMICOLON for_cond SEMICOLON for_iter RPAREN LBRACE declarations RBRACE
Rule 13    for_init -> type ID ASSIGN expression
Rule 14    for_init -> ID ASSIGN expression
Rule 15    for_init -> expression
Rule 16    for_init -> <empty>
Rule 17    for_cond -> expression
Rule 18    for_cond -> <empty>
Rule 19    for_iter -> ID ASSIGN expression
Rule 20    for_iter -> expression
Rule 21    for_iter -> <empty>
Rule 22    type -> INT
Rule 23    type -> FLOAT
Rule 24    type -> BOOL
Rule 25    type -> STRING
Rule 26    type -> CHAR
Rule 27    type -> VAR
Rule 28    type -> DOUBLE
Rule 29    type -> list_type
Rule 30    list_type -> LIST LT type GT
Rule 31    expression -> NEW LIST LT type GT LPAREN RPAREN
Rule 32    expression -> NEW LIST LT type GT LBRACE list_elements RBRACE
Rule 33    list_elements -> list_elements COMMA expression
Rule 34    list_elements -> expression
Rule 35    list_elements -> <empty>
Rule 36    expression -> ID LBRACKET expression RBRACKET
Rule 37    declaration -> ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
Rule 38    declaration -> ID DOT ADD LPAREN expression RPAREN SEMICOLON
Rule 39    expression -> expression PLUS expression
Rule 40    expression -> expression MINUS expression
Rule 41    expression -> expression TIMES expression
Rule 42    expression -> expression DIVIDE expression
Rule 43    expression -> expression GT expression
Rule 44    expression -> expression LT expression
Rule 45    expression -> expression GE expression
Rule 46    expression -> expression LE expression
Rule 47    expression -> expression EQ expression
Rule 48    expression -> expression NE expression
Rule 49    expression -> LPAREN expression RPAREN
Rule 50    expression -> INT_CONST
Rule 51    expression -> FLOAT_CONST
Rule 52    expression -> TRUE
Rule 53    expression -> FALSE
Rule 54    expression -> STRING_CONST
Rule 55    expression -> ID
Rule 56    expression -> MINUS expression
Rule 57    expression -> CONSOLE DOT READLINE LPAREN RPAREN
Rule 58    expression -> INT DOT PARSE LPAREN expression RPAREN
Rule 59    expression -> expression AND expression
Rule 60    expression -> expression OR expression
Rule 61    expression -> NOT expression
Rule 62    declaration -> type ID LPAREN params RPAREN LBRACE declarations RBRACE
Rule 63    params -> params COMMA param
Rule 64    params -> param
Rule 65    params -> <empty>
Rule 66    param -> type ID
Rule 67    expression -> ID LPAREN args RPAREN
Rule 68    args -> args COMMA expression
Rule 69    args -> expression
Rule 70    args -> <empty>
Rule 71    declaration -> ID LPAREN args RPAREN SEMICOLON
Rule 72    declaration -> RETURN expression SEMICOLON
Rule 73    declaration -> access_modifier CLASS ID LBRACE class_members RBRACE
Rule 74    declaration -> CLASS ID LBRACE class_members RBRACE
Rule 75    access_modifier -> PUBLIC
Rule 76    access_modifier -> PRIVATE
Rule 77    access_modifier -> PROTECTED
Rule 78    access_modifier -> <empty>
Rule 79    class_members -> class_members class_member
Rule 80    class_members -> class_member
Rule 81    class_members -> <empty>
Rule 82    class_member -> access_modifier type ID SEMICOLON
Rule 83    class_member -> access_modifier type ID ASSIGN expression SEMICOLON
Rule 84    class_member -> type ID SEMICOLON
Rule 85    class_member -> type ID ASSIGN expression SEMICOLON
Rule 86    class_member -> access_modifier type ID LPAREN params RPAREN LBRACE declarations RBRACE
Rule 87    class_member -> type ID LPAREN params RPAREN LBRACE declarations RBRACE
Rule 88    class_member -> access_modifier VOID ID LPAREN params RPAREN LBRACE declarations RBRACE
Rule 89    class_member -> VOID ID LPAREN params RPAREN LBRACE declarations RBRACE
Rule 90    class_member -> access_modifier ID LPAREN params RPAREN LBRACE declarations RBRACE
Rule 91    class_member -> ID LPAREN params RPAREN LBRACE declarations RBRACE
Rule 92    declaration -> ID ASSIGN expression SEMICOLON

Terminals, with rules where they appear

ADD                  : 38
AND                  : 59
ASSIGN               : 5 13 14 19 37 83 85 92
BOOL                 : 24
CHAR                 : 26
CLASS                : 73 74
COLON                : 
COMMA                : 33 63 68
CONSOLE              : 7 57
DIVIDE               : 42
DOT                  : 7 38 57 58
DOUBLE               : 28
ELSE                 : 9 10
EQ                   : 47
FALSE                : 53
FLOAT                : 23
FLOAT_CONST          : 51
FOR                  : 12
GE                   : 45
GT                   : 30 31 32 43
ID                   : 5 6 13 14 19 36 37 38 55 62 66 67 71 73 74 82 83 84 85 86 87 88 89 90 91 92
IF                   : 8 10
INT                  : 22 58
INT_CONST            : 50
LBRACE               : 8 9 10 12 32 62 73 74 86 87 88 89 90 91
LBRACKET             : 36 37
LE                   : 46
LIST                 : 30 31 32
LPAREN               : 7 8 10 12 31 38 49 57 58 62 67 71 86 87 88 89 90 91
LT                   : 30 31 32 44
MINUS                : 40 56
MINUSEQUAL           : 
MINUSMINUS           : 
MOD                  : 
NE                   : 48
NEW                  : 31 32
NOT                  : 61
OR                   : 60
PARSE                : 58
PLUS                 : 39
PLUSEQUAL            : 
PLUSPLUS             : 
PRIVATE              : 76
PROTECTED            : 77
PUBLIC               : 75
RBRACE               : 8 9 10 12 32 62 73 74 86 87 88 89 90 91
RBRACKET             : 36 37
READLINE             : 57
RETURN               : 72
RPAREN               : 7 8 10 12 31 38 49 57 58 62 67 71 86 87 88 89 90 91
SEMICOLON            : 5 6 7 12 12 37 38 71 72 82 83 84 85 92
STRING               : 25
STRING_CONST         : 54
TIMES                : 41
TRUE                 : 52
USING                : 
VAR                  : 27
VOID                 : 88 89
WRITELINE            : 7
error                : 

Nonterminals, with rules where they appear

access_modifier      : 73 82 83 86 88 90
args                 : 67 68 71
class_member         : 79 80
class_members        : 73 74 79
declaration          : 2 3
declarations         : 1 2 8 9 10 12 62 86 87 88 89 90 91
else_part            : 8 10
expression           : 5 7 8 10 13 14 15 17 19 20 33 34 36 37 37 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 56 58 59 59 60 60 61 68 69 72 83 85 92
for_cond             : 12
for_init             : 12
for_iter             : 12
list_elements        : 32 33
list_type            : 29
param                : 63 64
params               : 62 63 86 87 88 89 90 91
program              : 0
type                 : 5 6 13 30 31 32 62 66 82 83 84 85 86 87

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations
    (2) declarations -> . declarations declaration
    (3) declarations -> . declaration
    (4) declarations -> .
    (5) declaration -> . type ID ASSIGN expression SEMICOLON
    (6) declaration -> . type ID SEMICOLON
    (7) declaration -> . CONSOLE DOT WRITELINE LPAREN expression RPAREN SEMICOLON
    (8) declaration -> . IF LPAREN expression RPAREN LBRACE declarations RBRACE else_part
    (12) declaration -> . FOR LPAREN for_init SEMICOLON for_cond SEMICOLON for_iter RPAREN LBRACE declarations RBRACE
    (37) declaration -> . ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (38) declaration -> . ID DOT ADD LPAREN expression RPAREN SEMICOLON
    (62) declaration -> . type ID LPAREN params RPAREN LBRACE declarations RBRACE
    (71) declaration -> . ID LPAREN args RPAREN SEMICOLON
    (72) declaration -> . RETURN expression SEMICOLON
    (73) declaration -> . access_modifier CLASS ID LBRACE class_members RBRACE
    (74) declaration -> . CLASS ID LBRACE class_members RBRACE
    (92) declaration -> . ID ASSIGN expression SEMICOLON
    (22) type -> . INT
    (23) type -> . FLOAT
    (24) type -> . BOOL
    (25) type -> . STRING
    (26) type -> . CHAR
    (27) type -> . VAR
    (28) type -> . DOUBLE
    (29) type -> . list_type
    (75) access_modifier -> . PUBLIC
    (76) access_modifier -> . PRIVATE
    (77) access_modifier -> . PROTECTED
    (78) access_modifier -> .
    (30) list_type -> . LIST LT type GT

  ! shift/reduce conflict for CONSOLE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for LIST resolved as shift
    $end            reduce using rule 4 (declarations -> .)
    CONSOLE         shift and go to state 6
    IF              shift and go to state 7
    FOR             shift and go to state 8
    ID              shift and go to state 5
    RETURN          shift and go to state 9
    CLASS           shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15
    CHAR            shift and go to state 16
    VAR             shift and go to state 17
    DOUBLE          shift and go to state 18
    PUBLIC          shift and go to state 20
    PRIVATE         shift and go to state 21
    PROTECTED       shift and go to state 22
    LIST            shift and go to state 23

  ! CONSOLE         [ reduce using rule 4 (declarations -> .) ]
  ! IF              [ reduce using rule 4 (declarations -> .) ]
  ! FOR             [ reduce using rule 4 (declarations -> .) ]
  ! ID              [ reduce using rule 4 (declarations -> .) ]
  ! RETURN          [ reduce using rule 4 (declarations -> .) ]
  ! CLASS           [ reduce using rule 4 (declarations -> .) ]
  ! INT             [ reduce using rule 4 (declarations -> .) ]
  ! FLOAT           [ reduce using rule 4 (declarations -> .) ]
  ! BOOL            [ reduce using rule 4 (declarations -> .) ]
  ! STRING          [ reduce using rule 4 (declarations -> .) ]
  ! CHAR            [ reduce using rule 4 (declarations -> .) ]
  ! VAR             [ reduce using rule 4 (declarations -> .) ]
  ! DOUBLE          [ reduce using rule 4 (declarations -> .) ]
  ! PUBLIC          [ reduce using rule 4 (declarations -> .) ]
  ! PRIVATE         [ reduce using rule 4 (declarations -> .) ]
  ! PROTECTED       [ reduce using rule 4 (declarations -> .) ]
  ! LIST            [ reduce using rule 4 (declarations -> .) ]
  ! CLASS           [ reduce using rule 78 (access_modifier -> .) ]

    program                        shift and go to state 1
    declarations                   shift and go to state 2
    declaration                    shift and go to state 3
    type                           shift and go to state 4
    access_modifier                shift and go to state 10
    list_type                      shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations .
    (2) declarations -> declarations . declaration
    (5) declaration -> . type ID ASSIGN expression SEMICOLON
    (6) declaration -> . type ID SEMICOLON
    (7) declaration -> . CONSOLE DOT WRITELINE LPAREN expression RPAREN SEMICOLON
    (8) declaration -> . IF LPAREN expression RPAREN LBRACE declarations RBRACE else_part
    (12) declaration -> . FOR LPAREN for_init SEMICOLON for_cond SEMICOLON for_iter RPAREN LBRACE declarations RBRACE
    (37) declaration -> . ID LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (38) declaration -> . ID DOT ADD LPAREN expression RPAREN SEMICOLON
    (62) declaration -> . type ID LPAREN params RPAREN LBRACE declarations RBRACE
    (71) declaration -> . ID LPAREN args RPAREN SEMICOLON
    (72) declaration -> . RETURN expression SEMICOLON
    (73) declaration -> . access_modifier CLASS ID LBRACE class_members RBRACE
    (74) declaration -> . CLASS ID LBRACE class_members RBRACE
    (92) declaration -> . ID ASSIGN expression SEMICOLON
    (22) type -> . INT
    (23) type -> . FLOAT
    (24) type -> . BOOL
    (25) type -> . STRING
    (26) type -> . CHAR
    (27) type -> . VAR
    (28) type -> . DOUBLE
    (29) type -> . list_type
    (75) access_modifier -> . PUBLIC
    (76) access_modifier -> . PRIVATE
    (77) access_modifier -> . PROTECTED
    (78) access_modifier -> .
    (30) list_type -> . LIST LT type GT

  ! shift/reduce conflict for CLASS resolved as shift
    $end            reduce using rule 1 (program -> declarations .)
    CONSOLE         shift and go to state 6
    IF              shift and go to state 7
    FOR             shift and go to state 8
    ID              shift and go to state 5
    RETURN          shift and go to state 9
    CLASS           shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    BOOL            shift and go to state 14
    STRING          shift and go to state 15
    CHAR            shift and go to state 16
    VAR             shift and go to state 17
    DOUBLE          shift and go to state 18
    PUBLIC          shift and go to state 20
    PRIVATE         shift and go to state 21
    PROTECTED       shift and go to state 22
    LIST            shift and go to state 23

  ! CLASS           [ reduce using rule 78 (access_modifier -> .) ]

    declaration                    shift and go to state 24
    type                           shift and go to state 4
    access_modifier                shift and go to state 10
    list_type                      shift and go to state 19

state 3

    (3) declarations -> declaration .

    CONSOLE         reduce using rule 3 (declarations -> declaration .)
    IF              reduce using rule 3 (declarations -> declaration .)
    FOR             reduce using rule 3 (declarations -> declaration .)
    ID              reduce using rule 3 (declarations -> declaration .)
    RETURN          reduce using rule 3 (declarations -> declaration .)
    CLASS           reduce using rule 3 (declarations -> declaration .)
    INT             reduce using rule 3 (declarations -> declaration .)
    FLOAT           reduce using rule 3 (declarations -> declaration .)
    BOOL            reduce using rule 3 (declarations -> declaration .)
    STRING          reduce using rule 3 (declarations -> declaration .)
    CHAR            reduce using rule 3 (declarations -> declaration .)
    VAR             reduce using rule 3 (declarations -> declaration .)
    DOUBLE          reduce using rule 3 (declarations -> declaration .)
    PUBLIC          reduce using rule 3 (declarations -> declaration .)
    PRIVATE         reduce using rule 3 (declarations -> declaration .)
    PROTECTED       reduce using rule 3 (declarations -> declaration .)
    LIST            reduce using rule 3 (declarations -> declaration .)
    $end            reduce using rule 3 (declarations -> declaration .)
    RBRACE          reduce using rule 3 (declarations -> declaration .)


state 4

    (5) declaration -> type . ID ASSIGN expression SEMICOLON
    (6) declaration -> type . ID SEMICOLON
    (62) declaration -> type . ID LPAREN params RPAREN LBRACE declarations RBRACE

    ID              shift and go to state 25


state 5

    (37) declaration -> ID . LBRACKET expression RBRACKET ASSIGN expression SEMICOLON
    (38) declaration -> ID . DOT ADD LPAREN expression RPAREN SEMICOLON
    (71) declaration -> ID . LPAREN args RPAREN SEMICOLON
    (92) declaration -> ID . ASSIGN expression SEMICOLON

    LBRACKET        shift and go to state 26
    DOT             shift and go to state 28
    LPAREN          shift and go to state 29
    ASSIGN          shift and go to state 27


state 6

    (7) declaration -> CONSOLE . DOT WRITELINE LPAREN expression RPAREN SEMICOLON

    DOT             shift and go to state 30


state 7

    (8) declaration -> IF . LPAREN expression RPAREN LBRACE declarations RBRACE else_part

    LPAREN          shift and go to state 31


state 8

    (12) declaration -> FOR . LPAREN for_init SEMICOLON for_cond SEMICOLON for_iter RPAREN LBRACE declarations RBRACE

    LPAREN          shift and go to state 32


state 9

    (72) declaration -> RETURN . expression SEMICOLON
    (31) expression -> . NEW LIST LT type GT LPAREN RPAREN
    (32) expression -> . NEW LIST LT type GT LBRACE list_elements RBRACE
    (36) expression -> . ID LBRACKET expression RBRACKET
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GE expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . INT_CONST
    (51) expression -> . FLOAT_CONST
    (52) expression -> . TRUE
    (53) expression -> . FALSE
    (54) expression -> . STRING_CONST
    (55) expression -> . ID
    (56) expression -> . MINUS expression
    (57) expression -> . CONSOLE DOT READLINE LPAREN RPAREN
    (58) expression -> . INT DOT PARSE LPAREN expression RPAREN
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . NOT expression
    (67) expression -> . ID LPAREN args RPAREN

    NEW             shift and go to state 34
    ID              shift and go to state 36
    LPAREN          shift and go to state 35
    INT_CONST       shift and go to state 38
    FLOAT_CONST     shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    STRING_CONST    shift and go to state 42
    MINUS           shift and go to state 37
    CONSOLE         shift and go to state 43
    INT             shift and go to state 44
    NOT             shift and go to state 45

    expression                     shift and go to state 33

state 10

    (73) declaration -> access_modifier . CLASS ID LBRACE class_members RBRACE

    CLASS           shift and go to state 46


state 11

    (74) declaration -> CLASS . ID LBRACE class_members RBRACE

    ID              shift and go to state 47


state 12

    (22) type -> INT .

    ID              reduce using rule 22 (type -> INT .)
    GT              reduce using rule 22 (type -> INT .)


state 13

    (23) type -> FLOAT .

    ID              reduce using rule 23 (type -> FLOAT .)
    GT              reduce using rule 23 (type -> FLOAT .)


state 14

    (24) type -> BOOL .

    ID              reduce using rule 24 (type -> BOOL .)
    GT              reduce using rule 24 (type -> BOOL .)


state 15

    (25) type -> STRING .

    ID              reduce using rule 25 (type -> STRING .)
    GT              reduce using rule 25 (type -> STRING .)


state 16

    (26) type -> CHAR .

    ID              reduce using rule 26 (type -> CHAR .)
    GT              reduce using rule 26 (type -> CHAR .)


state 17

    (27) type -> VAR .

    ID              reduce using rule 27 (type -> VAR .)
    GT              reduce using rule 27 (type -> VAR .)


state 18

    (28) type -> DOUBLE .

    ID              reduce using rule 28 (type -> DOUBLE .)
    GT              reduce using rule 28 (type -> DOUBLE .)


state 19

    (29) type -> list_type .

    ID              reduce using rule 29 (type -> list_type .)
    GT              reduce using rule 29 (type -> list_type .)


state 20

    (75) access_modifier -> PUBLIC .

    CLASS           reduce using rule 75 (access_modifier -> PUBLIC .)
    VOID            reduce using rule 75 (access_modifier -> PUBLIC .)
    ID              reduce using rule 75 (access_modifier -> PUBLIC .)
    INT             reduce using rule 75 (access_modifier -> PUBLIC .)
    FLOAT           reduce using rule 75 (access_modifier -> PUBLIC .)
    BOOL            reduce using rule 75 (access_modifier -> PUBLIC .)
    STRING          reduce using rule 75 (access_modifier -> PUBLIC .)
    CHAR            reduce using rule 75 (access_modifier -> PUBLIC .)
    VAR             reduce using rule 75 (access_modifier -> PUBLIC .)
    DOUBLE          reduce using rule 75 (access_modifier -> PUBLIC .)
    LIST            reduce using rule 75 (access_modifier -> PUBLIC .)


state 21

    (76) access_modifier -> PRIVATE .

    CLASS           reduce using rule 76 (access_modifier -> PRIVATE .)
    VOID            reduce using rule 76 (access_modifier -> PRIVATE .)
    ID              reduce using rule 76 (access_modifier -> PRIVATE .)
    INT             reduce using rule 76 (access_modifier -> PRIVATE .)
    FLOAT           reduce using rule 76 (access_modifier -> PRIVATE .)
    BOOL            reduce using rule 76 (access_modifier -> PRIVATE .)
    STRING          reduce using rule 76 (access_modifier -> PRIVATE .)
    CHAR            reduce using rule 76 (access_modifier -> PRIVATE .)
    VAR             reduce using rule 76 (access_modifier -> PRIVATE .)
    DOUBLE          reduce using rule 76 (access_modifier -> PRIVATE .)
    LIST            reduce using rule 76 (access_modifier -> PRIVATE .)


state 22

    (77) access_modifier -> PROTECTED .

    CLASS           reduce using rule 77 (access_modifier -> PROTECTED .)
    VOID            reduce using rule 77 (access_modifier -> PROTECTED .)
    ID              reduce using rule 77 (access_modifier -> PROTECTED .)
    INT             reduce using rule 77 (access_modifier -> PROTECTED .)
    FLOAT           reduce using rule 77 (access_modifier -> PROTECTED .)
    BOOL            reduce using rule 77 (access_modifier -> PROTECTED .)
    STRING          reduce using rule 77 (access_modifier -> PROTECTED .)
    CHAR            reduce using rule 77 (access_modifier -> PROTECTED .)
    VAR             reduce using rule 77 (access_modifier -> PROTECTED .)
    DOUBLE          reduce using rule 77 (access_modifier -> PROTECTED .)
    LIST            reduce using rule 77 (access_modifier -> PROTECTED .)


state 23

    (30) list_type -> LIST . LT type GT

    LT              shift and go to state 48


state 24

    (2) declarations -> declarations declaration .

    CONSOLE         reduce using rule 2 (declarations -> declarations declaration .)
    IF              reduce using rule 2 (declarations -> declarations declaration .)
    FOR             reduce using rule 2 (declarations -> declarations declaration .)
    ID              reduce using rule 2 (declarations -> declarations declaration .)
    RETURN          reduce using rule 2 (declarations -> declarations declaration .)
    CLASS           reduce using rule 2 (declarations -> declarations declaration .)
    INT             reduce using rule 2 (declarations -> declarations declaration .)
    FLOAT           reduce using rule 2 (declarations -> declarations declaration .)
    BOOL            reduce using rule 2 (declarations -> declarations declaration .)
    STRING          reduce using rule 2 (declarations -> declarations declaration .)
    CHAR            reduce using rule 2 (declarations -> declarations declaration .)
    VAR             reduce using rule 2 (declarations -> declarations declaration .)
    DOUBLE          reduce using rule 2 (declarations -> declarations declaration .)
    PUBLIC          reduce using rule 2 (declarations -> declarations declaration .)
    PRIVATE         reduce using rule 2 (declarations -> declarations declaration .)
    PROTECTED       reduce using rule 2 (declarations -> declarations declaration .)
    LIST            reduce using rule 2 (declarations -> declarations declaration .)
    $end            reduce using rule 2 (declarations -> declarations declaration .)
    RBRACE          reduce using rule 2 (declarations -> declarations declaration .)


state 25

    (5) declaration -> type ID . ASSIGN expression SEMICOLON
    (6) declaration -> type ID . SEMICOLON
    (62) declaration -> type ID . LPAREN params RPAREN LBRACE declarations RBRACE

    ASSIGN          shift and go to state 49
    SEMICOLON       shift and go to state 50
    LPAREN          shift and go to state 51


state 26

    (37) declaration -> ID LBRACKET . expression RBRACKET ASSIGN expression SEMICOLON
    (31) expression -> . NEW LIST LT type GT LPAREN RPAREN
    (32) expression -> . NEW LIST LT type GT LBRACE list_elements RBRACE
    (36) expression -> . ID LBRACKET expression RBRACKET
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GE expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . INT_CONST
    (51) expression -> . FLOAT_CONST
    (52) expression -> . TRUE
    (53) expression -> . FALSE
    (54) expression -> . STRING_CONST
    (55) expression -> . ID
    (56) expression -> . MINUS expression
    (57) expression -> . CONSOLE DOT READLINE LPAREN RPAREN
    (58) expression -> . INT DOT PARSE LPAREN expression RPAREN
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . NOT expression
    (67) expression -> . ID LPAREN args RPAREN

    NEW             shift and go to state 34
    ID              shift and go to state 36
    LPAREN          shift and go to state 35
    INT_CONST       shift and go to state 38
    FLOAT_CONST     shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    STRING_CONST    shift and go to state 42
    MINUS           shift and go to state 37
    CONSOLE         shift and go to state 43
    INT             shift and go to state 44
    NOT             shift and go to state 45

    expression                     shift and go to state 52

state 27

    (92) declaration -> ID ASSIGN . expression SEMICOLON
    (31) expression -> . NEW LIST LT type GT LPAREN RPAREN
    (32) expression -> . NEW LIST LT type GT LBRACE list_elements RBRACE
    (36) expression -> . ID LBRACKET expression RBRACKET
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GE expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . INT_CONST
    (51) expression -> . FLOAT_CONST
    (52) expression -> . TRUE
    (53) expression -> . FALSE
    (54) expression -> . STRING_CONST
    (55) expression -> . ID
    (56) expression -> . MINUS expression
    (57) expression -> . CONSOLE DOT READLINE LPAREN RPAREN
    (58) expression -> . INT DOT PARSE LPAREN expression RPAREN
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . NOT expression
    (67) expression -> . ID LPAREN args RPAREN

    NEW             shift and go to state 34
    ID              shift and go to state 36
    LPAREN          shift and go to state 35
    INT_CONST       shift and go to state 38
    FLOAT_CONST     shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    STRING_CONST    shift and go to state 42
    MINUS           shift and go to state 37
    CONSOLE         shift and go to state 43
    INT             shift and go to state 44
    NOT             shift and go to state 45

    expression                     shift and go to state 53

state 28

    (38) declaration -> ID DOT . ADD LPAREN expression RPAREN SEMICOLON

    ADD             shift and go to state 54


state 29

    (71) declaration -> ID LPAREN . args RPAREN SEMICOLON
    (68) args -> . args COMMA expression
    (69) args -> . expression
    (70) args -> .
    (31) expression -> . NEW LIST LT type GT LPAREN RPAREN
    (32) expression -> . NEW LIST LT type GT LBRACE list_elements RBRACE
    (36) expression -> . ID LBRACKET expression RBRACKET
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GE expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . INT_CONST
    (51) expression -> . FLOAT_CONST
    (52) expression -> . TRUE
    (53) expression -> . FALSE
    (54) expression -> . STRING_CONST
    (55) expression -> . ID
    (56) expression -> . MINUS expression
    (57) expression -> . CONSOLE DOT READLINE LPAREN RPAREN
    (58) expression -> . INT DOT PARSE LPAREN expression RPAREN
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . NOT expression
    (67) expression -> . ID LPAREN args RPAREN

    RPAREN          reduce using rule 70 (args -> .)
    COMMA           reduce using rule 70 (args -> .)
    NEW             shift and go to state 34
    ID              shift and go to state 36
    LPAREN          shift and go to state 35
    INT_CONST       shift and go to state 38
    FLOAT_CONST     shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    STRING_CONST    shift and go to state 42
    MINUS           shift and go to state 37
    CONSOLE         shift and go to state 43
    INT             shift and go to state 44
    NOT             shift and go to state 45

    args                           shift and go to state 55
    expression                     shift and go to state 56

state 30

    (7) declaration -> CONSOLE DOT . WRITELINE LPAREN expression RPAREN SEMICOLON

    WRITELINE       shift and go to state 57


state 31

    (8) declaration -> IF LPAREN . expression RPAREN LBRACE declarations RBRACE else_part
    (31) expression -> . NEW LIST LT type GT LPAREN RPAREN
    (32) expression -> . NEW LIST LT type GT LBRACE list_elements RBRACE
    (36) expression -> . ID LBRACKET expression RBRACKET
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . expression GE expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . INT_CONST
    (51) expression -> . FLOAT_CONST
    (52) expression -> . TRUE
    (53) expression -> . FALSE
    (54) expression -> . STRING_CONST
    (55) expression -> . ID
    (56) expression -> . MINUS expression
    (57) expression -> . CONSOLE DOT READLINE LPAREN RPAREN
    (58) expression -> . INT DOT PARSE LPAREN expression RPAREN
    (59) expression -> . expression AND expression
    (60) expression -> . expression OR expression
    (61) expression -> . NOT expression
    (67) expression -> . ID LPAREN args RPAREN

    NEW             shift and go to state 34
    ID              shift and go to state 36
    LPAREN          shift and go to state 35
    INT_CONST       shift and go to state 38
    FLOAT_CONST     shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    STRING_CONST    shift and go to state 42
    MINUS           shift and go to state 37
    CONSOLE         shift and go to state 43
    INT             shift and go to state 44
    NOT             shift and go to state 45

    expression                     shift and go to state 58

state 32
